# traquito-sleep-loader

./: .gitmodules  CMakeLists.txt  README.md  TraquitoJetpack.bin.no_bootloader  memmap_custom.ld  test.c
copilot/: JavaScript_slot3.js  battery-capacity.js  sleep-control.js
